codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__chrome__tests__composer_focused_dark.snap
---
source: tui/src/bottom_pane/chat_composer/chrome_tests.rs
expression: "format!(\"{buffer:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 6 },
    content: [
        "╭──────────────────────────────────────────────────────────────────────────────╮",
        "┃ › Review the retry fix.                                                      │",
        "┃                                                                              │",
        "┃                                                                              │",
        "╰──────────────────────────────────────────────────────────────────────────────╯",
        "                                                             100% context left  ",
    ],
    styles: [
        x: 0, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 0, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Magenta, bg: Rgb(42, 42, 42), underline: Reset, modifier: BOLD,
        x: 3, y: 1, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 25, y: 1, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: REVERSED,
        x: 26, y: 1, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
