codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__chrome__tests__composer_unavailable_dark.snap
---
source: tui/src/bottom_pane/chat_composer/chrome_tests.rs
expression: "format!(\"{buffer:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 6 },
    content: [
        "╭ Unavailable ─────────────────────────────────────────────────────────────────╮",
        "│ › Input disabled.                                                            │",
        "│                                                                              │",
        "│                                                                              │",
        "╰──────────────────────────────────────────────────────────────────────────────╯",
        "                                                             100% context left  ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Rgb(163, 163, 160), bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 0, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(163, 163, 160), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Rgb(163, 163, 160), bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 1, fg: Rgb(163, 163, 160), bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(163, 163, 160), bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(163, 163, 160), bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
